<?xml version="1.0"?>
<package format="2">
    <name>boilerplate1</name>
    <version>0.0.1</version>
    <description>ROS2 Boilerplate V1</description>
    <maintainer email="eeyang92@gmail.com">Eric Yang</maintainer>
    <license>Apache License, Version 2.0</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>ament_pep8</test_depend>
    <test_depend>ament_pyflakes</test_depend>
    <test_depend>rclpy</test_depend>
    <test_depend>std_msgs</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
